--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active p-4">
                         <h5>Returning to Practice</h5>
-                        <p>We are scheduled to return to practice on June 15th.<br>
-                            Please register with the links below or contact us if you have any questions!<br>
+                        <p>Please register with the links below or contact us if you have any questions!<br>
                             Thank you for your patience.</p>
                     </div>
                 </div>
