Announcement, registration buttons

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div id="carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active p-4">
-                        <h5>Returning to Practice</h5>
-                        <p>Please register with the links below or contact us if you have any questions!<br>
-                            Thank you for your patience.</p>
+                        <h5>Autumn quarter has started!</h5>
+                        <p>Please register with the links below.<br>
+                            MASKS REQUIRED</p>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -160,22 +160,28 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Beginning</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=4448332"
-                            class="btn btn-primary" target="_blank">Register</a>
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=5707918"
+                            class="btn btn-primary mb-2" target="_blank">Register (1st half)</a>
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=10406285"
+                            class="btn btn-primary" target="_blank">Register (2nd half)</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Intermediate</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=4448360"
-                            class="btn btn-primary" target="_blank">Register</a>
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=5707943"
+                            class="btn btn-primary mb-2" target="_blank">Register (1st half)</a>
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=10406291"
+                            class="btn btn-primary" target="_blank">Register (2nd half)</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Advanced</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=4448346"
-                            class="btn btn-primary" target="_blank">Register</a>
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=5707968"
+                            class="btn btn-primary mb-2" target="_blank">Register (1st half)</a>
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=10406296"
+                            class="btn btn-primary" target="_blank">Register (2nd half)</a>
                     </div>
                 </div>
             </div>
