--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div id="carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active p-4">
-                        <h5>Autumn quarter has started!</h5>
+                        <h5>Winter quarter will begin January 4th!</h5>
                         <p>Please register with the links below.<br>
                             MASKS REQUIRED</p>
                     </div>
@@ -160,28 +160,22 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Beginning</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=5707918"
-                            class="btn btn-primary mb-2" target="_blank">Register (1st half)</a>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=10406285"
-                            class="btn btn-primary" target="_blank">Register (2nd half)</a>
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11396996"
+                            class="btn btn-primary mb-2" target="_blank">Register</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Intermediate</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=5707943"
-                            class="btn btn-primary mb-2" target="_blank">Register (1st half)</a>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=10406291"
-                            class="btn btn-primary" target="_blank">Register (2nd half)</a>
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600507"
+                            class="btn btn-primary mb-2" target="_blank">Register</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Advanced</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=5707968"
-                            class="btn btn-primary mb-2" target="_blank">Register (1st half)</a>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=10406296"
-                            class="btn btn-primary" target="_blank">Register (2nd half)</a>
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600524"
+                            class="btn btn-primary mb-2" target="_blank">Register</a>
                     </div>
                 </div>
             </div>
