--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Federal Way Community Center</h5>
                             <p class="card-text">
-                                Gym<br>
+                                Birch & Cedar Room<br>
                                 876 S 333rd St, Federal Way, WA 98003
                             </p>
                         </div>
