--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
                 <a class="nav-item nav-link"
                     href="https://calendar.google.com/calendar/b/2?cid=ZmVkZXJhbHdheWtlbmRvY2x1YkBnbWFpbC5jb20"
                     target="_blank">Calendar</a>
-                <a class="nav-item nav-link disabled" href="#">Gallery</a>
-                <a class="nav-item nav-link disabled" href="faq.html">FAQ</a>
             </ul>
         </div>
         </div>
@@ -74,9 +72,9 @@
             <div id="carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active p-4">
-                        <h5>Winter quarter will begin January 4th!</h5>
+                        <h5>Spring quarter begins March 22!</h5>
                         <p>Please register with the links below.<br>
-                            MASKS REQUIRED</p>
+                            Masks are not required, but preferred.</p>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
@@ -160,21 +158,21 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Beginning</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11396996"
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11447534"
                             class="btn btn-primary mb-2" target="_blank">Register</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Intermediate</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600507"
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600981"
                             class="btn btn-primary mb-2" target="_blank">Register</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Advanced</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600524"
+                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600988"
                             class="btn btn-primary mb-2" target="_blank">Register</a>
                     </div>
                 </div>
@@ -188,17 +186,11 @@
             <div class="row pt-2">
                 <div class="col-md pb-4">
                     <h5>Contact Us</h5>
-                    <a href="mailto:federalwaykendoclub@gmail.com"><i class="fas fa-envelope fa-2x pr-4"></i></a>
-                    <a href="http://m.me/federalwaykendoclub"><i class="fab fa-facebook-messenger fa-2x"></i></a>
-                </div>
-                <div class="col-md pb-4">
-                    <h5>Social Media</h5>
-                    <a href="https://www.facebook.com/federalwaykendoclub/" target="_blank"><i
-                            class="fab fa-facebook-square fa-2x"></i></a>
+                    <a href="mailto:federalwaykendoclub@gmail.com"><i class="fas fa-envelope fa-2x"></i></a>
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
-                <h6>© 2020 Federal Way Kendo Club</h6>
+                <h6>© 2022 Federal Way Kendo Club</h6>
             </div>
         </div>
     </footer>
