--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/ace32ccffb.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7be49024ef.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/fw.png">
     <title>Federal Way Kendo | About</title>
@@ -17,33 +17,51 @@
 <body class="text-center">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="index.html">
-            <img src="img/fw.png" width="35" height="40">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-            aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarToggler">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Home
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="index.html#dojo">Our Dojo</a>
-                        <a class="dropdown-item" href="index.html#sensei">Our Sensei</a>
-                        <a class="dropdown-item" href="index.html#membership">Membership</a>
-                    </div>
-                </li>
-                <a class="nav-item nav-link" href="about.html">About</a>
-                <a class="nav-item nav-link"
-                    href="https://calendar.google.com/calendar/b/2?cid=ZmVkZXJhbHdheWtlbmRvY2x1YkBnbWFpbC5jb20"
-                    target="_blank">Calendar</a>
-            </ul>
-        </div>
+    <nav class="navbar navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#top">
+                <img src="img/fw.png" width="35" height="40">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header justify-content-end">
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="faq.html">FAQ</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Resources
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                                <li><a class="dropdown-item" href="terms.html">Terms</a></li>
+                                <li><a class="dropdown-item" href="https://youtu.be/cpidZRL5ZbI"
+                                        target="_blank">Warmup</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"
+                                href="https://calendar.google.com/calendar/b/3?cid=a2VudGtlbmRvY2x1YkBnbWFpbC5jb20"
+                                target="_blank">Calendar</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -69,19 +87,23 @@
     <section class="bg-light">
         <div class="container">
             <h3 class="pb-3">Sensei</h3>
-            <div class="card-deck">
-                <div class="card mb-4">
-                    <img src="https://via.placeholder.com/300" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Curtis Marsten</h5>
-                        <h6 class="card-subtitle text-muted">Renshi 6 Dan</h6>
+            <div class="row row-cols-1 g-2">
+                <div class="col-md-6">
+                    <div class="card mb-4">
+                        <img src="https://via.placeholder.com/300" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Curtis Marsten</h5>
+                            <h6 class="card-subtitle text-muted">Renshi 6 Dan</h6>
+                        </div>
                     </div>
                 </div>
-                <div class="card mb-4">
-                    <img src="https://via.placeholder.com/300" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Vicki Marsten</h5>
-                        <h6 class="card-subtitle text-muted">4 Dan</h6>
+                <div class="col-md-6">
+                    <div class="card mb-4">
+                        <img src="https://via.placeholder.com/300" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Vicki Marsten</h5>
+                            <h6 class="card-subtitle text-muted">4 Dan</h6>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -94,19 +116,16 @@
             <h3 class="mb-4">Affiliations</h3>
             <div class="row">
                 <div class="col-lg mb-4">
-                    <img src="img/auskf.jpg" class="affimg">
+                    <a href="https://www.auskf.org/home" target="_blank"> <img src="img/auskf.jpg" class="affimg"></a>
                     <h6 class="pt-3">All United States Kendo Federation</h6>
-                    <a href="http://www.auskf.info/index.htm" class="stretched-link" target="_blank"></a>
                 </div>
                 <div class="col-lg mb-4">
-                    <img src="img/pnkf.jpg" class="affimg">
+                    <a href="http://www.pnkf.org/" target="_blank"><img src="img/pnkf.jpg" class="affimg"></a>
                     <h6 class="pt-3">Pacific Northwest Kendo Federation</h6>
-                    <a href="http://www.pnkf.org/" class="stretched-link" target="_blank"></a>
                 </div>
                 <div class="col-lg">
-                    <img src="img/logo.gif" class="affimg">
+                    <a href="http://kentkendo.org/" target="_blank"><img src="img/logo.gif" class="affimg"></a>
                     <h6 class="pt-3">Kent Kendo Club</h6>
-                    <a href="http://kentkendo.org/" class="stretched-link" target="_blank"></a>
                 </div>
             </div>
         </div>
@@ -128,14 +147,8 @@
     </footer>
 
     <!-- Optional JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
 </body>
