--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="kendo, kent, club, kent kendo, kent kendo club, 
-    pnkf, pacific, northwest, federation, pacific northwest kendo federation, 
-    auskf, all, united, states, all united states kendo federation, federal, way, federal way, federal way kendo club,
-    japan, japanese, japanese fencing, martial, arts, martial arts">
+        pnkf, pacific, northwest, federation, pacific northwest kendo federation, 
+        auskf, all, united, states, all united states kendo federation, federal, way, federal way, federal way kendo club,
+        japan, japanese, japanese fencing, martial, arts, martial arts">
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/ace32ccffb.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7be49024ef.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/fw.png">
     <title>Federal Way Kendo | Home</title>
@@ -21,33 +21,51 @@
 <body class="text-center">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#top">
-            <img src="img/fw.png" width="35" height="40">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-            aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarToggler">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Home
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#dojo">Our Dojo</a>
-                        <a class="dropdown-item" href="#sensei">Our Sensei</a>
-                        <a class="dropdown-item" href="#membership">Membership</a>
-                    </div>
-                </li>
-                <a class="nav-item nav-link" href="about.html">About</a>
-                <a class="nav-item nav-link"
-                    href="https://calendar.google.com/calendar/b/2?cid=ZmVkZXJhbHdheWtlbmRvY2x1YkBnbWFpbC5jb20"
-                    target="_blank">Calendar</a>
-            </ul>
-        </div>
+    <nav class="navbar navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#top">
+                <img src="img/fw.png" width="35" height="40">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header justify-content-end">
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="faq.html">FAQ</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Resources
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                                <li><a class="dropdown-item" href="terms.html">Terms</a></li>
+                                <li><a class="dropdown-item" href="https://youtu.be/cpidZRL5ZbI"
+                                        target="_blank">Warmup</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"
+                                href="https://calendar.google.com/calendar/b/3?cid=a2VudGtlbmRvY2x1YkBnbWFpbC5jb20"
+                                target="_blank">Calendar</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -77,14 +95,6 @@
                             Masks are not required, but preferred.</p>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
         </div>
     </section>
@@ -130,19 +140,23 @@
         <div class="container col-lg-6">
             <a id="sensei"></a>
             <h3 class="mb-4">Our Sensei</h3>
-            <div class="card-deck">
-                <div class="card">
-                    <img src="" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title m-0">Curtis Marsten</h5>
-                        <p class="card-text">Renshi 6 Dan</p>
+            <div class="row row-cols-1 g-2">
+                <div class="col-md-6">
+                    <div class="card">
+                        <img src="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title m-0">Curtis Marsten</h5>
+                            <p class="card-text">Renshi 6 Dan</p>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title m-0">Vicki Marsten</h5>
-                        <p class="card-text">4 Dan</p>
+                <div class="col-md-6">
+                    <div class="card">
+                        <img src="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title m-0">Vicki Marsten</h5>
+                            <p class="card-text">4 Dan</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -154,26 +168,32 @@
         <div class="container col-lg-6">
             <a id="membership"></a>
             <h3 class="mb-4">Membership</h3>
-            <div class="card-deck">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Beginning</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11447534"
-                            class="btn btn-primary mb-2" target="_blank">Register</a>
+            <div class="row row-cols-1 g-3">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Beginning</h5>
+                            <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11447534"
+                                class="btn btn-primary" target="_blank">Register</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Intermediate</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600981"
-                            class="btn btn-primary mb-2" target="_blank">Register</a>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Intermediate</h5>
+                            <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600981"
+                                class="btn btn-primary" target="_blank">Register</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Advanced</h5>
-                        <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600988"
-                            class="btn btn-primary mb-2" target="_blank">Register</a>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Advanced</h5>
+                            <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600988"
+                                class="btn btn-primary" target="_blank">Register</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -196,14 +216,8 @@
     </footer>
 
     <!-- Optional JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
 
