--- a/faq.html
+++ b/faq.html
@@ -207,6 +207,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <div id="experienced-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="experienced-headingThree" data-bs-parent="#accordionExperienced">
+                        <div class="accordion-body">
+                            If you have valid federation membership, you may also participate in rank tests, seminars,
+                            and tournaments. You may also be able to sometimes attend these events even if they are not
+                            in the local area.
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
