Fixed accordion question

--- a/faq.html
+++ b/faq.html
@@ -208,6 +208,13 @@
                     </div>
                 </div>
                 <div class="accordion-item">
+                    <h3 class="accordion-header" id="experienced-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#experienced-collapseThree" aria-expanded="false"
+                            aria-controls="experienced-collapseThree">
+                            <em>What other events can I participate in?</em>
+                        </button>
+                    </h3>
                     <div id="experienced-collapseThree" class="accordion-collapse collapse"
                         aria-labelledby="experienced-headingThree" data-bs-parent="#accordionExperienced">
                         <div class="accordion-body">
