--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div id="carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active p-4">
-                        <h5>Spring quarter begins March 22!</h5>
+                        <h5>Summer quarter begins 7 June!</h5>
                         <p>Please register with the links below.<br>
                             Masks are not required, but preferred.</p>
                     </div>
@@ -173,7 +173,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Beginning</h5>
-                            <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11447534"
+                            <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600994"
                                 class="btn btn-primary" target="_blank">Register</a>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Intermediate</h5>
-                            <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600981"
+                            <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11601006"
                                 class="btn btn-primary" target="_blank">Register</a>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Advanced</h5>
-                            <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11600988"
+                            <a href="https://rec.cityoffederalway.com/wbwsc/webtrac.wsc/search.html?module=AR&fmid=11601011"
                                 class="btn btn-primary" target="_blank">Register</a>
                         </div>
                     </div>
