Polishing, new look

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </header>
 
     <!-- Announcements Carousel -->
-    <section class="announcements text-white">
+    <section class="announcements bg-dark text-white">
         <div class="container">
             <h3>Announcements</h3>
             <div id="carousel" class="carousel slide" data-ride="carousel">
@@ -118,6 +118,8 @@
                                 Birch & Cedar Room<br>
                                 876 S 333rd St, Federal Way, WA 98003
                             </p>
+                            <a href="https://itallhappenshere.org/" class="card-link btn btn-primary"
+                                target="_blank">Website</a>
                         </div>
                     </div>
                 </div>
@@ -138,24 +140,23 @@
     <!-- Sensei -->
     <section class="bg-light">
         <div class="container col-lg-6">
-            <a id="sensei"></a>
             <h3 class="mb-4">Our Sensei</h3>
             <div class="row row-cols-1 g-2">
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="" class="card-img-top">
+                        <!--<img src="https://via.placeholder.com/300" class="card-img-top">-->
                         <div class="card-body">
-                            <h5 class="card-title m-0">Curtis Marsten</h5>
-                            <p class="card-text">Renshi 6 Dan</p>
+                            <h5 class="card-title">Curtis Marsten</h5>
+                            <h6 class="card-subtitle text-muted">Renshi 6 Dan</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="" class="card-img-top">
+                        <!--<img src="https://via.placeholder.com/300" class="card-img-top">-->
                         <div class="card-body">
-                            <h5 class="card-title m-0">Vicki Marsten</h5>
-                            <p class="card-text">4 Dan</p>
+                            <h5 class="card-title">Vicki Marsten</h5>
+                            <h6 class="card-subtitle text-muted">4 Dan</h6>
                         </div>
                     </div>
                 </div>
@@ -201,15 +202,18 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer p-3 bg-dark">
+    <footer class="footer p-4 bg-dark">
         <div class="container text-white">
-            <div class="row pt-2">
-                <div class="col-md pb-4">
+            <div class="row row-cols">
+                <div class="col-sm-6 d-flex justify-content-center align-items-center mb-4">
+                    <img src="img/fw.png" width="50" height="60">
+                </div>
+                <div class="col-sm-6 mb-4">
                     <h5>Contact Us</h5>
                     <a href="mailto:federalwaykendoclub@gmail.com"><i class="fas fa-envelope fa-2x"></i></a>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
+            <div>
                 <h6>© 2022 Federal Way Kendo Club</h6>
             </div>
         </div>
