--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#top">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/fw.png" width="35" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -35,7 +35,7 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="about.html">About</a>
@@ -66,15 +66,17 @@
     </nav>
 
     <!-- Banner -->
-    <section class="banner text-white d-flex justify-content-center align-items-center">
-        <h1>Federal Way Kendo Club</h1>
+    <section class="banner bg-dark text-white">
+        <div class="container">
+            <img src="img/fw.png" style="width: 20%">
+            <h1 class="mt-4">Federal Way Kendo Club</h1>
+        </div>
     </section>
 
     <!-- Introduction -->
     <section>
         <div class="container col-lg-6">
-            <img src="img/fw.png" style="width: 25%">
-            <p class="pt-4">
+            <p class="m-0">
                 Originally formed from the Puyallup Kendo Club, Federal Way Kendo Club was founded in 2009
                 and has been providing instruction of the traditional Japanese martial art of Kendo through the parks
                 department. Our club is part of the Pacific Northwest Kendo Federation (PNKF) and the All United States
@@ -85,12 +87,12 @@
 
     <!-- Members -->
     <section class="bg-light">
-        <div class="container">
-            <h3 class="pb-3">Sensei</h3>
+        <div class="container col-lg-6">
+            <h3 class="mb-4">Sensei</h3>
             <div class="row row-cols-1 g-2">
                 <div class="col-md-6">
-                    <div class="card mb-4">
-                        <img src="https://via.placeholder.com/300" class="card-img-top">
+                    <div class="card">
+                        <!--<img src="https://via.placeholder.com/300" class="card-img-top">-->
                         <div class="card-body">
                             <h5 class="card-title">Curtis Marsten</h5>
                             <h6 class="card-subtitle text-muted">Renshi 6 Dan</h6>
@@ -98,8 +100,8 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card mb-4">
-                        <img src="https://via.placeholder.com/300" class="card-img-top">
+                    <div class="card">
+                        <!--<img src="https://via.placeholder.com/300" class="card-img-top">-->
                         <div class="card-body">
                             <h5 class="card-title">Vicki Marsten</h5>
                             <h6 class="card-subtitle text-muted">4 Dan</h6>
@@ -114,16 +116,16 @@
     <section>
         <div class="container">
             <h3 class="mb-4">Affiliations</h3>
-            <div class="row">
-                <div class="col-lg mb-4">
+            <div class="row row-cols-1">
+                <div class="col-md mb-4">
                     <a href="https://www.auskf.org/home" target="_blank"> <img src="img/auskf.jpg" class="affimg"></a>
                     <h6 class="pt-3">All United States Kendo Federation</h6>
                 </div>
-                <div class="col-lg mb-4">
+                <div class="col-md mb-4">
                     <a href="http://www.pnkf.org/" target="_blank"><img src="img/pnkf.jpg" class="affimg"></a>
                     <h6 class="pt-3">Pacific Northwest Kendo Federation</h6>
                 </div>
-                <div class="col-lg">
+                <div class="col-md">
                     <a href="http://kentkendo.org/" target="_blank"><img src="img/logo.gif" class="affimg"></a>
                     <h6 class="pt-3">Kent Kendo Club</h6>
                 </div>
@@ -132,15 +134,18 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer p-3 bg-dark">
+    <footer class="footer p-4 bg-dark">
         <div class="container text-white">
-            <div class="row pt-2">
-                <div class="col-md pb-4">
+            <div class="row row-cols">
+                <div class="col-sm-6 d-flex justify-content-center align-items-center mb-4">
+                    <img src="img/fw.png" width="50" height="60">
+                </div>
+                <div class="col-sm-6 mb-4">
                     <h5>Contact Us</h5>
                     <a href="mailto:federalwaykendoclub@gmail.com"><i class="fas fa-envelope fa-2x"></i></a>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
+            <div>
                 <h6>© 2022 Federal Way Kendo Club</h6>
             </div>
         </div>
