--- a/faq.html
+++ b/faq.html
@@ -384,16 +384,19 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer p-3 bg-dark">
-        <div class="container text-white text-center">
-            <div class="row pt-2">
-                <div class="col-md pb-4">
+    <footer class="footer p-4 bg-dark text-center">
+        <div class="container text-white">
+            <div class="row row-cols">
+                <div class="col-sm-6 d-flex justify-content-center align-items-center mb-4">
+                    <img src="img/fw.png" width="50" height="60">
+                </div>
+                <div class="col-sm-6 mb-4">
                     <h5>Contact Us</h5>
-                    <a href="mailto:kentkendoclub@gmail.com"><i class="fas fa-envelope fa-2x"></i></a>
+                    <a href="mailto:federalwaykendoclub@gmail.com"><i class="fas fa-envelope fa-2x"></i></a>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
-                <h6>© 2022 Kent Kendo Club</h6>
+            <div>
+                <h6>© 2022 Federal Way Kendo Club</h6>
             </div>
         </div>
     </footer>
